2005-01-17  Yann Hodique  <Yann.Hodique@lifl.fr>

	* config/cedet-config.el:
	disable semantic-load-turn-useful-things-on

2005-01-16  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el:
	(minimal): use completion-config from now

	* dotemacs-cust.el:
	(custom-set-variables): use partial-completion-mode, fix desktop usage

	* config/completion-config.el:
	initial checkin, completion-related stuff

	* SConstruct:
	begin using scons to maintain my config

2005-01-13  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/patches.el:
	(uniquify): endly... the end of those buffer<2>

2005-01-10  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotgnus.el:
	(gnus-agent): activated
	(gnus-select-article-hook): activate caching...

	* dotemacs-cust.el:
	(custom-set-variables): gnus should cache anything it can

	* config/muse-config.el:
	(muse-mode-highlight-p): highlighting is too buggy to be useful. Maybe investigate this later

	* config/fracc-config.el:
	re-enabled fracc

2005-01-07  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/patches.el:
	(backup-by-copying): preserve links after modifications

	* dotemacs-cust.el:
	(custom-set-variables): muse settings for charsets

2005-01-06  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el:
	(global-set-key): set M-DEL to kill-syntax-backward

	* dotemacs-cust.el:
	(custom-set-variables): suppress changelog indentation

	* config/fracc-config.el:
	autoload problem. let it work now, investigate later

2005-01-02  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el:
	more experimental stuff

	* dotemacs-cust.el:
	(custom-set-faces): make faces more usable on dark background

	* config/:
	initial checkin, new directory for configuration code

	* perso/psvn-hacked.el:
	initial checkin, new version of psvn for log-edit usage

	* perso/elect-mbuf.el:
	initial checkin

	* perso/autoloads.el:
	separate autoloads for byte-compilation

2004-12-04  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotgnus.el:
	(nbc-nnir): set it to nil
