@@ -1,3 +1,8 @@
+2005-01-19  Yann Hodique  <Yann.Hodique@lifl.fr>
+
+	* perso/multi-region.el:
+	new version
+
 2005-01-17  Yann Hodique  <Yann.Hodique@lifl.fr>
 
 	* config/cedet-config.el:
